编译 luci-app-keepalived-ha

--- a/.github/workflows/IMwrt-24.10-6.6.yml
+++ b/.github/workflows/IMwrt-24.10-6.6.yml
@@ -434,6 +434,13 @@ jobs:
           name: OpenWrt_config
           path: openwrt/config
 
+      - name: 编译 luci-app-keepalived-ha
+        run: |
+          cd openwr
+          make defconfig
+          make download -j1 V=s
+          make package/luci-app-keepalived-ha/compile V=s
+
       - name: 编译固件
         id: compile
         timeout-minutes: 180
