--- a/.github/workflows/IMwrt-24.10-6.6.yml
+++ b/.github/workflows/IMwrt-24.10-6.6.yml
@@ -439,6 +439,7 @@ jobs:
           cd openwrt
           make defconfig
           make download -j1 V=s
+          make toolchain/install V=s
           make package/luci-app-keepalived-ha/compile V=s
 
       - name: 编译固件
