--- a/.github/workflows/IMwrt-24.10-6.6.yml
+++ b/.github/workflows/IMwrt-24.10-6.6.yml
@@ -47,6 +47,11 @@ on:
         options:
           - '24.10-6.6.config'
           - '24.10-6.6-office.config'
+      enable_keepalived:
+        description: '集成keepalived'
+        type: boolean
+        required: true
+        default: true
       istore:
         description: '集成iStore商店'
         type: boolean
@@ -69,7 +74,7 @@ env:
   REPO_URL: ${{ github.event.inputs.repo_url || 'https://github.com/padavanonly/immortalwrt-mt798x-24.10' }}
   REPO_BRANCH: ${{ github.event.inputs.repo_branch || 'openwrt-24.10-6.6' }}
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE:  ${{ github.event.inputs.config_file || '24.10-6.6.config' }}
+  CONFIG_FILE: ${{ github.event.inputs.config_file || '24.10-6.6.config' }}
   DIY_P1_SH: scripts/24.10-6.6/diy-part1.sh
   DIY_P2_SH: scripts/24.10-6.6/diy-part2.sh
   UPLOAD_FIRMWARE: true
@@ -79,6 +84,7 @@ env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN  }}
   BUILD_COMMIT_MSGS_FILE: ''
   CHECKED_COMMIT_MSGS_FILE: ''
+  ENABLE_KEEPALIVED: ${{ github.event.inputs.enable_keepalived || 'true' }}
 
 jobs:
   check-source-updates:
@@ -320,6 +326,13 @@ jobs:
           ./scripts/feeds update -a || { echo "更新 Feeds 失败"; exit 1; }
           ./scripts/feeds install -a || { echo "安装 Feeds 失败"; exit 1; }
 
+      - name: 添加 luci-app-keepalived-ha 插件
+        if: env.ENABLE_KEEPALIVED == 'true'
+        run: |
+          git clone --depth=1 https://github.com/PlanetEditorX/luci-app-build.git
+          mkdir -p openwrt/package/luci-app-keepalived-ha
+          cp -r luci-app-build/luci-app-keepalived-ha/* openwrt/package/luci-app-keepalived-ha/
+
       - name: 安装iStore商店
         if: (github.event.inputs.istore == 'true')
         run: |
@@ -337,6 +350,64 @@ jobs:
           chmod +x $DIY_P2_SH
           cd openwrt
           $GITHUB_WORKSPACE/$DIY_P2_SH
+          make defconfig
+
+      - name: 安装 keepalived 并启用 IPVS
+        if: env.ENABLE_KEEPALIVED == 'true'
+        run: |
+          cd openwrt
+          echo ">>> 启用 keepalived 和相关模块..."
+          cat <<EOF >> .config
+          # 核心功能
+          CONFIG_PACKAGE_keepalived=y
+          CONFIG_PACKAGE_keepalived-sync=y
+          CONFIG_PACKAGE_luci-app-keepalived=y
+
+          # IPVS 支持
+          CONFIG_PACKAGE_kmod-nf-ipvs=y
+          CONFIG_PACKAGE_kmod-ipvs=y
+          CONFIG_PACKAGE_kmod-ipvs-core=y
+          CONFIG_PACKAGE_kmod-ipvs-rr=y
+          CONFIG_PACKAGE_kmod-ipvs-wrr=y
+          CONFIG_PACKAGE_kmod-ipvs-sh=y
+          CONFIG_PACKAGE_kmod-nf-ipvs-ftp=y
+          CONFIG_PACKAGE_kmod-nf-ipvs-sip=y
+
+          # Netfilter & IPTables 支持
+          CONFIG_PACKAGE_kmod-ipt-core=y
+          CONFIG_PACKAGE_kmod-ipt-conntrack=y
+          CONFIG_PACKAGE_kmod-ipt-ipvs=y
+          CONFIG_PACKAGE_kmod-ipt-nat=y
+          CONFIG_PACKAGE_kmod-ipt-raw=y
+          CONFIG_PACKAGE_kmod-ipt-filter=y
+          CONFIG_PACKAGE_kmod-ipt-compat-xtables=y
+          CONFIG_PACKAGE_kmod-nf-conntrack=y
+          CONFIG_PACKAGE_kmod-nf-nat=y
+          CONFIG_PACKAGE_kmod-nfnetlink=y
+
+          # 网络依赖库
+          CONFIG_PACKAGE_libnl-genl200=y
+          CONFIG_PACKAGE_libnl-route200=y
+          CONFIG_PACKAGE_libnfnetlink0=y
+          CONFIG_PACKAGE_libip4tc2=y
+          CONFIG_PACKAGE_libip6tc2=y
+          CONFIG_PACKAGE_libxtables12=y
+          CONFIG_PACKAGE_libipset13=y
+
+          # 实用工具
+          CONFIG_PACKAGE_procps-ng-pkill=y
+          CONFIG_PACKAGE_git=y
+          CONFIG_PACKAGE_git-lfs=y
+          CONFIG_PACKAGE_openssh-client=y
+          CONFIG_PACKAGE_openssh-keygen=y
+          CONFIG_PACKAGE_yq=y
+          CONFIG_PACKAGE_libopenssl=y
+
+          # LuCI 兼容层
+          CONFIG_PACKAGE_luci-compat=y
+          EOF
+
+          echo ">>> 执行 make defconfig，解析依赖关系"
           make defconfig
 
       - name: 下载软件包
@@ -381,6 +452,20 @@ jobs:
         with:
           name: OpenWrt_config
           path: openwrt/config
+
+      - name: 安装调试工具链
+        if: env.ENABLE_KEEPALIVED == 'true'
+        run: |
+          cd openwrt
+          make defconfig
+          make download -j1 V=s
+          make toolchain/install V=s
+
+      - name: 编译 luci-app-keepalived-ha
+        if: env.ENABLE_KEEPALIVED == 'true'
+        run: |
+          cd openwrt
+          make package/luci-app-keepalived-ha/compile V=s
 
       - name: 编译固件
         id: compile
