--- a/.github/workflows/IMwrt-24.10-6.6.yml
+++ b/.github/workflows/IMwrt-24.10-6.6.yml
@@ -352,7 +352,7 @@ jobs:
           $GITHUB_WORKSPACE/$DIY_P2_SH
           make defconfig
 
-      - name: 安装 keepalived 并启用 IPVS
+      - name: 启用 keepalived 和 IPVS
         if: env.ENABLE_KEEPALIVED == 'true'
         run: |
           cd openwrt
@@ -461,14 +461,14 @@ jobs:
           make download -j1 V=s
           make toolchain/install V=s
 
-      - name: 编译 luci-app-keepalived-ha
-        if: env.ENABLE_KEEPALIVED == 'true'
-        run: |
-          cd openwrt
-          # 准备内核构建环境
-          make target/linux/prepare
-          # 编译包
-          make package/luci-app-keepalived-ha/compile V=s
+      # - name: 编译 luci-app-keepalived-ha
+      #   if: env.ENABLE_KEEPALIVED == 'true'
+      #   run: |
+      #     cd openwrt
+      #     # 准备内核构建环境
+      #     make target/linux/prepare
+      #     # 编译包
+      #     make package/luci-app-keepalived-ha/compile V=s
 
       - name: 编译固件
         id: compile
