--- a/.github/workflows/IMwrt-24.10-6.6.yml
+++ b/.github/workflows/IMwrt-24.10-6.6.yml
@@ -454,13 +454,35 @@ jobs:
           name: OpenWrt_config
           path: openwrt/config
 
-      - name: 编译固件
-        id: compile
-        timeout-minutes: 180
+      - name: 配置构建参数
+        timeout-minutes: 10
+        run: |
+          cd openwrt
+          make defconfig
+          make diffconfig > .config.diff || true
+      
+      - name: 下载依赖包
+        timeout-minutes: 60
+        run: |
+          cd openwrt
+          make download -j1 V=s || { echo "安装 Feeds 失败"; exit 1; }
+      
+      - name: 编译固件（不含安装）
+        timeout-minutes: 120
         run: |
           set -e
           cd openwrt
-          make -j$(nproc) || make -j4 || make -j1 V=s
+          make -j$(nproc) world BUILD_LOG=1 || make -j4 world || make -j1 V=s world
+      
+      - name: 安装 packages 到 staging_dir
+        timeout-minutes: 60
+        run: |
+          cd openwrt
+          make package/install V=s || { echo "安装阶段失败"; exit 1; }
+      
+      - name: 设置输出变量
+        if: success()
+        run: |
           echo "status=success" >> $GITHUB_OUTPUT
           echo "DEVICE_NAME=_${{ matrix.device_model }}" >> $GITHUB_ENV
           echo "FILE_DATE=_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
