--- a/.github/workflows/IMwrt-24.10-6.6.yml
+++ b/.github/workflows/IMwrt-24.10-6.6.yml
@@ -47,6 +47,16 @@ on:
         options:
           - '24.10-6.6.config'
           - '24.10-6.6-office.config'
+      enable_openclash:
+        description: '集成openclash'
+        type: boolean
+        required: true
+        default: true
+      enable_wechatpush:
+        description: '集成wechatpush'
+        type: boolean
+        required: true
+        default: true
       enable_keepalived:
         description: '集成keepalived'
         type: boolean
@@ -85,6 +95,8 @@ env:
   BUILD_COMMIT_MSGS_FILE: ''
   CHECKED_COMMIT_MSGS_FILE: ''
   ENABLE_KEEPALIVED: ${{ github.event.inputs.enable_keepalived || 'true' }}
+  ENABLE_OPENCLASH: ${{ github.event.inputs.enable_openclash || 'true' }}
+  ENABLE_WECHATPUSH: ${{ github.event.inputs.enable_wechatpush || 'true' }}
 
 jobs:
   check-source-updates:
@@ -253,6 +265,7 @@ jobs:
           echo "export PATH=/usr/lib/ccache:$PATH" >> $GITHUB_ENV
           echo "export CCACHE_DIR=$HOME/.ccache" >> $GITHUB_ENV
           ccache -M 5G
+          ./scripts/config set CONFIG_CCACHE
 
       - name: 安装 GitHub CLI
         run: |
@@ -356,60 +369,30 @@ jobs:
         if: env.ENABLE_KEEPALIVED == 'true'
         run: |
           cd openwrt
-          echo ">>> 启用 keepalived 和相关模块..."
-          cat <<EOF >> .config
-          # 核心功能
-          CONFIG_PACKAGE_keepalived=y
-          CONFIG_PACKAGE_keepalived-sync=y
-          CONFIG_PACKAGE_luci-app-keepalived=y
-          CONFIG_PACKAGE_luci-app-keepalived-ha=y
-
-          # IPVS 支持
-          CONFIG_PACKAGE_kmod-nf-ipvs=y
-          CONFIG_PACKAGE_kmod-ipvs=y
-          CONFIG_PACKAGE_kmod-ipvs-core=y
-          CONFIG_PACKAGE_kmod-ipvs-rr=y
-          CONFIG_PACKAGE_kmod-ipvs-wrr=y
-          CONFIG_PACKAGE_kmod-ipvs-sh=y
-          CONFIG_PACKAGE_kmod-nf-ipvs-ftp=y
-          CONFIG_PACKAGE_kmod-nf-ipvs-sip=y
-
-          # Netfilter & IPTables 支持
-          CONFIG_PACKAGE_kmod-ipt-core=y
-          CONFIG_PACKAGE_kmod-ipt-conntrack=y
-          CONFIG_PACKAGE_kmod-ipt-ipvs=y
-          CONFIG_PACKAGE_kmod-ipt-nat=y
-          CONFIG_PACKAGE_kmod-ipt-raw=y
-          CONFIG_PACKAGE_kmod-ipt-filter=y
-          CONFIG_PACKAGE_kmod-ipt-compat-xtables=y
-          CONFIG_PACKAGE_kmod-nf-conntrack=y
-          CONFIG_PACKAGE_kmod-nf-nat=y
-          CONFIG_PACKAGE_kmod-nfnetlink=y
-
-          # 网络依赖库
-          CONFIG_PACKAGE_libnl-genl200=y
-          CONFIG_PACKAGE_libnl-route200=y
-          CONFIG_PACKAGE_libnfnetlink0=y
-          CONFIG_PACKAGE_libip4tc2=y
-          CONFIG_PACKAGE_libip6tc2=y
-          CONFIG_PACKAGE_libxtables12=y
-          CONFIG_PACKAGE_libipset13=y
-
-          # 实用工具
-          CONFIG_PACKAGE_procps-ng-pkill=y
-          CONFIG_PACKAGE_git=y
-          CONFIG_PACKAGE_git-lfs=y
-          CONFIG_PACKAGE_openssh-client=y
-          CONFIG_PACKAGE_openssh-keygen=y
-          CONFIG_PACKAGE_yq=y
-          CONFIG_PACKAGE_libopenssl=y
-
-          # LuCI 兼容层
-          CONFIG_PACKAGE_luci-compat=y
-          EOF
-
+          echo ">>> 注入 keepalived.config 中的配置项..."
+          CONFIG_FILE="../config/keepalived.config"
+          if [ ! -f "$CONFIG_FILE" ]; then
+            echo "❌ 未找到配置文件: $CONFIG_FILE"
+            exit 1
+          fi
+          while IFS= read -r line; do
+            # 跳过空行和注释
+            [[ -z "$line" || "$line" =~ ^# ]] && continue
+            # 提取配置项和赋值
+            opt=$(echo "$line" | grep -o 'CONFIG_[^=]*')
+            val=$(echo "$line" | grep -o '=.*' | cut -c2-)
+            if [ -n "$opt" ]; then
+              case "$val" in
+                y) ./scripts/config set "$opt" ;;
+                m) ./scripts/config module "$opt" ;;
+                n) ./scripts/config unset "$opt" ;;
+                *) ./scripts/config set "$opt=$val" ;;
+              esac
+            fi
+          done < "$CONFIG_FILE"
           echo ">>> 执行 make defconfig，解析依赖关系"
           make defconfig
+          make package/index
 
       - name: 下载软件包
         id: package
@@ -441,12 +424,6 @@ jobs:
         uses: P3TERX/ssh2actions@v1.0.0
         if: (github.event.inputs.ssh == 'true')
 
-      - name: 验证 kmod-nf-ipvs 是否启用并打包
-        run: |
-          grep CONFIG_PACKAGE_kmod-nf-ipvs=y openwrt/.config
-          find openwrt/bin/targets -name '*nf-ipvs*.ipk'
-          find openwrt/bin/ -name "libip*tc2*.ipk"
-
       - name: 上传 .config
         uses: actions/upload-artifact@v4
         if: (github.event.inputs.ssh == 'true')
@@ -455,31 +432,72 @@ jobs:
           path: openwrt/config
 
       - name: 配置构建参数
-        timeout-minutes: 10
         run: |
           cd openwrt
           make defconfig
           make diffconfig > .config.diff || true
-      
-      - name: 下载依赖包
+
+      - name: 初始化配置并下载依赖包
         timeout-minutes: 60
         run: |
           cd openwrt
-          make download -j1 V=s || { echo "安装 Feeds 失败"; exit 1; }
-      
+          make defconfig
+          make download -j$(nproc) V=s || { echo "❌ 下载依赖包失败"; exit 1; }
+
+      - name: 编译内核与关键模块
+        run: |
+          cd openwrt
+          make target/linux/compile -j$(nproc)
+          make package/kernel/gpio-button-hotplug/compile V=s || { echo "❌ gpio-button-hotplug 编译失败"; exit 1; }
+
+      - name: 安装工具链并编译 keepalived 相关内核模块
+        if: env.ENABLE_KEEPALIVED == 'true'
+        run: |
+          cd openwrt
+          make toolchain/install -j$(nproc)
+          make package/kernel/kmod-ipvs/compile V=s || { echo "❌ kmod-ipvs 编译失败"; exit 1; }
+          make package/kernel/kmod-nf-conntrack/compile V=s || { echo "❌ kmod-nf-conntrack 编译失败"; exit 1; }
+
+      - name: 编译 OpenClash
+        if: env.ENABLE_OPENCLASH == 'true'
+        run: |
+          cd openwrt
+          ./scripts/config set CONFIG_PACKAGE_luci-app-openclash
+          make defconfig
+          make package/luci-app-openclash/compile V=s || { echo "❌ OpenClash 编译失败"; exit 1; }
+
+      - name: 编译微信推送
+        if: env.ENABLE_WECHATPUSH == 'true'
+        run: |
+          cd openwrt
+          ./scripts/config set CONFIG_PACKAGE_luci-app-wechatpush
+          ./scripts/config set CONFIG_PACKAGE_luci-i18n-wechatpush-zh-cn
+          make defconfig
+          make package/luci-app-wechatpush/compile V=s || { echo "❌ wechatpush 编译失败"; exit 1; }
+          make package/luci-i18n-wechatpush-zh-cn/compile V=s || { echo "❌ wechatpush-zh-cn 编译失败"; exit 1; }
+
+      - name: 编译 luci-app-keepalived-ha
+        if: env.ENABLE_KEEPALIVED == 'true'
+        run: |
+          cd openwrt
+          make target/linux/prepare
+          make package/luci-app-keepalived-ha/compile V=s || { echo "❌ keepalived-ha 编译失败"; exit 1; }
+
       - name: 编译固件（不含安装）
         timeout-minutes: 120
         run: |
           set -e
           cd openwrt
-          make -j$(nproc) world BUILD_LOG=1 || make -j4 world || make -j1 V=s world
-      
+          make -j$(nproc) world BUILD_LOG=1 || \
+          make -j4 world BUILD_LOG=1 || \
+          make -j1 V=s world BUILD_LOG=1
+
       - name: 安装 packages 到 staging_dir
         timeout-minutes: 60
         run: |
           cd openwrt
           make package/install V=s || { echo "安装阶段失败"; exit 1; }
-      
+
       - name: 设置输出变量
         if: success()
         run: |
