--- a/.github/workflows/IMwrt-24.10-6.6.yml
+++ b/.github/workflows/IMwrt-24.10-6.6.yml
@@ -47,16 +47,6 @@ on:
         options:
           - '24.10-6.6.config'
           - '24.10-6.6-office.config'
-      enable_openclash:
-        description: '集成openclash'
-        type: boolean
-        required: true
-        default: true
-      enable_wechatpush:
-        description: '集成wechatpush'
-        type: boolean
-        required: true
-        default: true
       enable_keepalived:
         description: '集成keepalived'
         type: boolean
@@ -72,6 +62,16 @@ on:
         type: boolean
         required: true
         default: false
+      # enable_openclash:
+      #   description: '集成openclash'
+      #   type: boolean
+      #   required: true
+      #   default: true
+      # enable_wechatpush:
+      #   description: '集成wechatpush'
+      #   type: boolean
+      #   required: true
+      #   default: true
 
   schedule:
     - cron: '0 6 * * 1'
