--- a/.github/workflows/IMwrt-24.10-6.6.yml
+++ b/.github/workflows/IMwrt-24.10-6.6.yml
@@ -52,13 +52,13 @@ on:
         type: boolean
         required: true
         default: true
-      istore:
-        description: '集成iStore商店'
+      ssh:
+        description: 'SSH connection to Actions'
         type: boolean
         required: true
         default: false
-      ssh:
-        description: 'SSH connection to Actions'
+      istore:
+        description: '集成iStore商店'
         type: boolean
         required: true
         default: false
@@ -265,7 +265,8 @@ jobs:
           echo "export PATH=/usr/lib/ccache:$PATH" >> $GITHUB_ENV
           echo "export CCACHE_DIR=$HOME/.ccache" >> $GITHUB_ENV
           ccache -M 5G
-          ./scripts/config set CONFIG_CCACHE
+          echo "CONFIG_CCACHE=y" >> .config
+          make defconfig
 
       - name: 安装 GitHub CLI
         run: |
@@ -375,20 +376,16 @@ jobs:
             echo "❌ 未找到配置文件: $CONFIG_FILE"
             exit 1
           fi
+          # 去重注入配置项
           while IFS= read -r line; do
             # 跳过空行和注释
             [[ -z "$line" || "$line" =~ ^# ]] && continue
-            # 提取配置项和赋值
-            opt=$(echo "$line" | grep -o 'CONFIG_[^=]*')
-            val=$(echo "$line" | grep -o '=.*' | cut -c2-)
-            if [ -n "$opt" ]; then
-              case "$val" in
-                y) ./scripts/config set "$opt" ;;
-                m) ./scripts/config module "$opt" ;;
-                n) ./scripts/config unset "$opt" ;;
-                *) ./scripts/config set "$opt=$val" ;;
-              esac
-            fi
+            # 提取配置项
+            opt=$(echo "$line" | cut -d= -f1)
+            val=$(echo "$line" | cut -d= -f2)
+            # 移除旧项再追加新项
+            sed -i "/^$opt=/d" .config
+            echo "$opt=$val" >> .config
           done < "$CONFIG_FILE"
           echo ">>> 执行 make defconfig，解析依赖关系"
           make defconfig
@@ -462,7 +459,7 @@ jobs:
         if: env.ENABLE_OPENCLASH == 'true'
         run: |
           cd openwrt
-          ./scripts/config set CONFIG_PACKAGE_luci-app-openclash
+          echo "CONFIG_PACKAGE_luci-app-openclash=y" >> .config
           make defconfig
           make package/luci-app-openclash/compile V=s || { echo "❌ OpenClash 编译失败"; exit 1; }
 
@@ -470,10 +467,14 @@ jobs:
         if: env.ENABLE_WECHATPUSH == 'true'
         run: |
           cd openwrt
-          ./scripts/config set CONFIG_PACKAGE_luci-app-wechatpush
-          ./scripts/config set CONFIG_PACKAGE_luci-i18n-wechatpush-zh-cn
+          echo ">>> 注入微信推送配置项..."
+          echo "CONFIG_PACKAGE_luci-app-wechatpush=y" >> .config
+          echo "CONFIG_PACKAGE_luci-i18n-wechatpush-zh-cn=y" >> .config
+          echo ">>> 执行 make defconfig，解析依赖关系"
           make defconfig
+          echo ">>> 编译 luci-app-wechatpush"
           make package/luci-app-wechatpush/compile V=s || { echo "❌ wechatpush 编译失败"; exit 1; }
+          echo ">>> 编译 luci-i18n-wechatpush-zh-cn"
           make package/luci-i18n-wechatpush-zh-cn/compile V=s || { echo "❌ wechatpush-zh-cn 编译失败"; exit 1; }
 
       - name: 编译 luci-app-keepalived-ha
