--- a/config/keepalived.config
+++ b/config/keepalived.config
@@ -5,6 +5,7 @@ CONFIG_PACKAGE_luci-app-keepalived=y
 CONFIG_PACKAGE_luci-app-keepalived-ha=y
 
 # IPVS 支持
+CONFIG_PACKAGE_ipvsadm=y
 CONFIG_PACKAGE_kmod-nf-ipvs=y
 CONFIG_PACKAGE_kmod-ipvs=y
 CONFIG_PACKAGE_kmod-ipvs-core=y
@@ -36,6 +37,7 @@ CONFIG_PACKAGE_libxtables12=y
 CONFIG_PACKAGE_libipset13=y
 
 # 实用工具
+CONFIG_PACKAGE_procps-ng=y
 CONFIG_PACKAGE_procps-ng-pkill=y
 CONFIG_PACKAGE_git=y
 CONFIG_PACKAGE_git-lfs=y
