不直接编译

--- a/.github/workflows/IMwrt-24.10-6.6.yml
+++ b/.github/workflows/IMwrt-24.10-6.6.yml
@@ -454,28 +454,21 @@ jobs:
       #     # 构建索引
       #     make package/index V=s
 
-      - name: 编译 OpenClash
-        if: env.ENABLE_OPENCLASH == 'true'
+      - name: 添加 OpenClash 和 微信推送
         run: |
           cd openwrt
-          echo "CONFIG_PACKAGE_luci-app-openclash=y" >> .config
+          if [ "$ENABLE_OPENCLASH" = "true" ]; then
+            echo "CONFIG_PACKAGE_luci-app-openclash=y" >> .config
+          fi
+          if [ "$ENABLE_WECHATPUSH" = "true" ]; then
+            echo ">>> 注入微信推送配置项..."
+            echo "CONFIG_PACKAGE_jq=y" >> .config
+            echo "CONFIG_PACKAGE_luci-app-wechatpush=y" >> .config
+            echo "CONFIG_PACKAGE_luci-i18n-wechatpush-zh-cn=y" >> .config
+            echo ">>> 执行 make defconfig，解析依赖关系"
+          fi
           make defconfig
-          make package/luci-app-openclash/compile V=s || { echo "❌ OpenClash 编译失败"; exit 1; }
 
-      - name: 编译微信推送
-        if: env.ENABLE_WECHATPUSH == 'true'
-        run: |
-          cd openwrt
-          echo ">>> 注入微信推送配置项..."
-          echo "CONFIG_PACKAGE_jq=y" >> .config
-          echo "CONFIG_PACKAGE_luci-app-wechatpush=y" >> .config
-          echo "CONFIG_PACKAGE_luci-i18n-wechatpush-zh-cn=y" >> .config
-          echo ">>> 执行 make defconfig，解析依赖关系"
-          make defconfig
-          echo ">>> 编译 luci-app-wechatpush"
-          make package/luci-app-wechatpush/compile V=s || { echo "❌ wechatpush 编译失败"; exit 1; }
-          echo ">>> 编译 luci-i18n-wechatpush-zh-cn"
-          make package/luci-i18n-wechatpush-zh-cn/compile V=s || { echo "❌ wechatpush-zh-cn 编译失败"; exit 1; }
 
       # - name: 编译 luci-app-keepalived-ha
       #   if: env.ENABLE_KEEPALIVED == 'true'
