--- a/.github/workflows/IMwrt-24.10-6.6.yml
+++ b/.github/workflows/IMwrt-24.10-6.6.yml
@@ -477,24 +477,12 @@ jobs:
       #     make target/linux/prepare
       #     make package/luci-app-keepalived-ha/compile V=s || { echo "❌ keepalived-ha 编译失败"; exit 1; }
 
-      - name: 编译固件（不含安装）
-        timeout-minutes: 120
+      - name: 编译固件
+        timeout-minutes: 180
         run: |
           set -e
           cd openwrt
-          make -j$(nproc) world BUILD_LOG=1 || \
-          make -j4 world BUILD_LOG=1 || \
-          make -j1 V=s world BUILD_LOG=1
-
-      - name: 安装 packages 到 staging_dir
-        timeout-minutes: 60
-        run: |
-          cd openwrt
-          make package/install V=s || { echo "❌ 安装阶段失败"; exit 1; }
-
-      - name: 设置输出变量
-        if: success()
-        run: |
+          make -j$(nproc) || make -j4 || make -j1 V=s
           echo "status=success" >> $GITHUB_OUTPUT
           echo "DEVICE_NAME=_${{ matrix.device_model }}" >> $GITHUB_ENV
           echo "FILE_DATE=_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
